--- a/src/config.conf
+++ b/src/config.conf
@@ -2,10 +2,10 @@
 # Directory locations of sql migrations
 path=/home/ricky/sql
 
-# Set as true if you wish to use a git repository with this program. If used, your sql migration respoitory should be cloned from the git repository being used.
+# Set as true if you wish to use a git repository with this program. If used, your sql migration respoitory should be cloned from the git repository being used. Must have git installed.
 repository=true
 
-# Set as true if you wish to use flyway with this program, then configure the flyway setting lower on this page.
+# Set as true if you wish to use flyway with this program, then configure the flyway settings lower on this page. Must have flyway.
 flyway=true
 
 
